[package]
name = "rutter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features= ["json", "secrets"]}
rocket_db_pools = {version = "0.1.0-rc", features = ["deadpool_redis"]}
serde = "1.0.136"
redis = "0.21.5"
argon2 = "0.4.0"
redis-graph = "0.4.2"

[patch.crates-io]
rocket = { git = "https://github.com/SergioBenitez/Rocket"}
rocket_db_pools= {  git = "https://github.com/SergioBenitez/Rocket"}
