[package]
name = "rutter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features= ["json", "secrets"]}
rocket_db_pools = {version = "0.1.0-rc.2", features = ["deadpool_redis"]}
serde = "1.0.136"
redis = { version = "0.21.5", features = ["aio"] }
argon2 = "0.4.0"
uuid = { version = "0.8", features = ["v4"] }
redisgraphio = { version = "0.1", features=["tokio-comp"] }
